[package]
name = "flutter-drm"
version = "0.1.0"
authors = ["csnewman"]
edition = "2018"

[dependencies]
log = "0.4.6"
chrono = "^0.4"
winit = "*"
parking_lot = "^0.10.0"
crossbeam = "0.7.3"
xkbcommon = "0.4.0"
input = { version = "0.5.0", features = ["udev"] }

[dependencies.smithay]
path = "../../smithay"
default-features = false
features = [ "backend_egl", "backend_winit", "backend_libinput", "backend_udev", "backend_drm_legacy", "backend_drm_gbm", "backend_drm_egl", "backend_session", "input", "backend_session_logind" ]

[dependencies.flutter-engine]
path = "../../flutter-rs/flutter-engine"

[dependencies.flutter-plugins]
path = "../../flutter-rs/flutter-plugins"
